# CampusHub

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  api.yaml  client.env.sample  docker-compose.yaml  mongo.env.sample  package-lock.json  push.env.sample  server.env.sample
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ci.yaml  client-ci.yaml  e2e-ci.yaml  preview.yaml  server-ci.yaml
client/: .env.sample  .eslintrc.cjs  Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/app/: constants.ts  globals.css
client/src/: App.tsx  index.css  main.tsx
client/src/api/: config.ts  index.ts  store.ts  types.d.ts
client/src/assets/: constants.ts
client/src/components/: AccountDetails.tsx  Banner.tsx  Cart.tsx  CategoryTabs.tsx  CreateAccount.tsx  DealOfTheDay.tsx  Error404.tsx  (+47 more)
notification_server/: Dockerfile  index.js  package-lock.json  package.json
server/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  precomputed_recommendations.csv  pyproject.toml
server/campus_hub/: __init__.py  app.py  gunicorn.py
server/campus_hub/controllers/: __init__.py  admin.py  authentication.py  notifications.py  offers.py  order.py  payment.py  precompute.py  precomputed_recommendations.csv  products.py  reviews.py  sellers.py  services.py  stores.py  users.py
server/campus_hub/models/: __init__.py  admin.py  carts.py  models.py  notification.py  offers.py  orders.py  payment.py  product.py  review.py  seller.py  service.py  store.py  user.py
server/campus_hub/models/schema/: service.yaml  store.yaml
server/campus_hub/specs/: api.yaml
server/campus_hub/utils/: data.py  db.py  distance_matix.py  errors.py  exceptions.py  functions.py  response.py
server/campus_hub/utils/payment/: main.py
server/campus_hub/utils/razorpay/: __init__.py  main.py
server/campus_hub/utils/recommendationEngine/: precompute.py  precomputed_recommendations.csv  recommendationEngine.py  users.py
server/recommendation-engine/: mlflow.yaml  precompute.py  recommendationEngine.py
server/server/: app.py
server/server/controller/: hello.py
server/server/specs/: openapi.yaml
server/tests/: conftest.py
server/tests/controllers/: test_sellers.py
server/tests/unit/controllers/: test_gu.py  test_notifs.py  test_offers.py  test_payment.py  test_products.py  test_sellers.py  test_services.py  test_stores.py  test_user.py
(+44 files in other folders)
