[tool.poetry]
name = "campus_hub"
version = "0.1.0"
description = "CampusHub backend"
authors = ["Jae Aeich <jh4official@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connexion = ">=2.11.2,<3.0.0"
gunicorn = "^21.2.0"
flask = "2.2.5"
swagger-ui-bundle = "0.0.6"
werkzeug = ">=2.2.2,<3.0.0"
typing = "3.7.4.1"
pydantic = "^2.5.3"
pymongo = {version = "4.7.2", extras = ["srv"]}
mongo-types = "^0.15.1"
types-pytz = "^2023.3.1.1"
shortuuid = "^1.0.11"
flask-cors = "^4.0.0"
pytest-cov = "^4.1.0"
razorpay = "^1.4.1"
python-dotenv = "^1.0.1"
metaflow = "^2.11.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
pandas-stubs = "^2.2.1.240316"
mlflow = "^2.11.3"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
mypy = "^1.8.0"
pytest = "^7.4.4"
types-flask-cors = "^4.0.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

